tests/cases/compiler-development/artifact/errors/diagnostic-struct-literal-missing-field.diagnostic
diagnostic error code=T0001 family=type message="missing field 'y' in struct literal for 'Point'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/structs/errors/struct-literal-missing-field.ari" display="tests/cases/structs/errors/struct-literal-missing-field.ari" bytes=107
  Label index=0 role=primary source_id=0 source="tests/cases/structs/errors/struct-literal-missing-field.ari" line=7 column=15 end_line=7 end_column=20 byte_start=71 byte_end=76 message=""
  Snippet label=0 text="  --> tests/cases/structs/errors/struct-literal-missing-field.ari:7:15\n   |\n 7 |   let point = Point { x: 1 };\n   |               ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/structs/errors/struct-literal-missing-field.ari" line=3 column=3 end_line=3 end_column=4 byte_start=27 byte_end=28 message="field 'y' is declared here"
  Snippet label=1 text="  --> tests/cases/structs/errors/struct-literal-missing-field.ari:3:3\n   |\n 3 |   y: i64,\n   |   ^"
  Note index=0 location=none message="struct literals must initialize every declared field"
  Help index=0 location=none message="provide a value for field 'y'"
